tests/unit-fail-compilation/j027a.ref
j027a.c:2:2: error: missing terminating ' character
  'x
  ^
j027a.c:3:2: error: missing terminating ' character
  ';
  ^
Translation failed (config dumped). Run kcc -d j027a.c to see commands run.
